--- a/src/main/resources/templates/area.html
+++ b/src/main/resources/templates/area.html
@@ -29,8 +29,8 @@
     <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
     <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/css/bootstrap-select.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/js/bootstrap-select.min.js"></script>
-    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/highcharts.js"></script>
-    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/modules/exporting.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/highcharts/9.0.1/highcharts.js"></script>
+<!--    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/modules/exporting.js"></script>-->
     <script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>
     <script src="https://code.highcharts.com/modules/variwide.js"></script>
 
@@ -49,7 +49,6 @@
                 </a>
             </li>
             <li><a href="#mouth" data-toggle="tab">按月显示</a></li>
-            <li><a href="#year" data-toggle="tab">按年显示</a></li>
         </ul>
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade in active" id="day">
@@ -69,10 +68,20 @@
                 <div id="container"></div>
             </div>
             <div class="tab-pane fade" id="mouth">
-                <div id="container1">mouth</div>
-            </div>
-            <div class="tab-pane fade" id="year">
-                <div id="container2">year</div>
+                <div class='row' style="padding-top:10px">
+                    <div class="col-md-5"></div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <div class='input-group date' id='datetimepicker2'>
+                                <input type='text' class="form-control" />
+                                <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-5"></div>
+                </div>
+                <div id="container1", style="height: 600px"></div>
             </div>
         </div>
     </div>
@@ -103,16 +112,21 @@
         }
         let now = new Date().format("yyyy-MM-dd");
 
+        let now1 = new Date().format("yyyy-MM");
+
         $(".selectpicker").selectpicker('val','2');//默认选中 value=“selectrateid” 的option
         $(".selectpicker").selectpicker('refresh');
         show(1451, $('.selectpicker option:selected').val());
+        showMouth(1451, $('.selectpicker option:selected').val());
         $('#city a').on('click', function (e) {
             e.preventDefault()
             $(this).siblings('a').removeClass('active');  // 删除其兄弟元素的样式
             $(this).addClass('active');
-            $(".form-control").val(now);
+            $("#datetimepicker1 .form-control").val(now);
+            $("#datetimepicker2 .form-control").val(now1);
             if($(this).attr("id") != '0'){
                 show($(this).attr("id"), $('.selectpicker option:selected').val());
+                showMouth($(this).attr("id"), $('.selectpicker option:selected').val());
             }else{
                 console.log("待处理");
             }
@@ -161,6 +175,40 @@
                 }
             });
         });
+
+        $('#datetimepicker2').datetimepicker({
+            format: 'YYYY-MM',
+            locale: moment.locale('zh-cn'),
+            defaultDate: now,
+        }).on('dp.change',function(ev){
+            ev.preventDefault()
+            let  time = ev.date.valueOf();
+            let datestr = new Date(time).format('yyyy-MM');
+            var selected = $('.selectpicker option:selected').val();
+            $('#city').children().map(function (index, e) {
+                if($(this).hasClass('active')){
+                    let id = $(this).attr('id');
+                    console.log(id);
+                    $.ajax({
+                        url:'/aqi/getMouthAreaAqiByCity/'+id+'/'+ selected+'?tmp='+datestr,//请求数据的地址
+                        type : "get",
+                        async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
+                        data : {},
+                        dataType : "json",        //返回数据形式为json
+                        success:function(result){
+                            if(result['code'] == 500){
+                                alert(result['msg'])
+                            }{
+                                moutReact(result['x'], result['data']);
+                            }
+                        },
+                        error:function(e){
+                            alert("系统异常")
+                        }
+                    });
+                }
+            });
+        });
     })
 
     function show(id, type) {
@@ -198,6 +246,75 @@
             },
             error:function(e){
             }
+        });
+    }
+
+    function showMouth(id, type){
+        Date.prototype.format = function(fmt) {
+            var o = {
+                "M+" : this.getMonth()+1,                 //月份
+                "d+" : this.getDate(),                    //日
+                "h+" : this.getHours(),                   //小时
+                "m+" : this.getMinutes(),                 //分
+                "s+" : this.getSeconds(),                 //秒
+                "q+" : Math.floor((this.getMonth()+3)/3), //季度
+                "S"  : this.getMilliseconds()             //毫秒
+            };
+            if(/(y+)/.test(fmt)) {
+                fmt=fmt.replace(RegExp.$1, (this.getFullYear()+"").substr(4 - RegExp.$1.length));
+            }
+            for(var k in o) {
+                if(new RegExp("("+ k +")").test(fmt)){
+                    fmt = fmt.replace(RegExp.$1, (RegExp.$1.length==1) ? (o[k]) : (("00"+ o[k]).substr((""+ o[k]).length)));
+                }
+            }
+            return fmt;
+        }
+        let now = new Date().format("yyyy-MM");
+        $.ajax({
+            url:'/aqi/getMouthAreaAqiByCity/'+id+'/'+type+'?tmp='+now,//请求数据的地址
+            type : "get",
+            async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
+            data : {},
+            dataType : "json",        //返回数据形式为json
+            success:function(result){
+                moutReact(result['x'], result['data']);
+            },
+            error:function(e){
+            }
+        });
+    }
+
+    function moutReact(x, v) {
+        var chart = Highcharts.chart('container1', {
+            chart: {
+                type: 'bar'
+            },
+            title: {
+                text: '区域月污染统计表'
+            },
+            xAxis: {
+                categories: x
+            },
+            yAxis: {
+                min: 0,
+                title: {
+                    text: '区域'
+                }
+            },
+            legend: {
+                /* 图例显示顺序反转
+                 * 这是因为堆叠的顺序默认是反转的，可以设置
+                 * yAxis.reversedStacks = false 来达到类似的效果
+                 */
+                reversed: true
+            },
+            plotOptions: {
+                series: {
+                    stacking: 'normal'
+                }
+            },
+            series: v
         });
     }
 
