--- a/src/main/resources/templates/compare.html
+++ b/src/main/resources/templates/compare.html
@@ -23,6 +23,7 @@
     </style>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-table/1.18.2/bootstrap-table.min.css" rel="stylesheet">
     <link href="css/city-select.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -30,9 +31,11 @@
     <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
     <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/css/bootstrap-select.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/js/bootstrap-select.min.js"></script>
-    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/highcharts.js"></script>
-    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/modules/exporting.js"></script>
+    <script src="http://https://cdn.bootcdn.net/ajax/libs/highcharts/9.0.1/highcharts.js"></script>
+<!--    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/modules/exporting.js"></script>-->
     <script src="https://code.highcharts.com/modules/variwide.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/bootstrap-table/1.18.2/bootstrap-table.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-table/1.11.1/locale/bootstrap-table-zh-CN.min.js"></script>
     <script src="js/citydata.min.js"></script>
     <script src="js/citySelect-1.0.4.js"></script>
 
@@ -49,6 +52,11 @@
     </div>
     <div class="row">
         <div id="container" class="col-md-12"  style="min-width:400px;height:600px;"></div>
+    </div>
+    <div style="padding-left: 10px; padding-right: 10px">
+        <!--bootstrap-table表格-->
+        <table id="table">
+        </table>
     </div>
 </div>
 
@@ -77,20 +85,91 @@
                 request(arr);
             }
         });
+
     })
 
     function request(arr_data) {
-        $.ajax({
-            url:'/aqi/compareCitys/2',//请求数据的地址
-            type : "post",
-            async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
-            data : {names: JSON.stringify(arr_data)},
-            dataType : "json",        //返回数据形式为json
-            success:function(result){
-                compare(result);
+        // $.ajax({
+        //     url:'/aqi/compareCitys/2',//请求数据的地址
+        //     type : "post",
+        //     async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
+        //     data : {names: JSON.stringify(arr_data)},
+        //     dataType : "json",        //返回数据形式为json
+        //     success:function(result){
+        //         compare(result['aqiVos']);
+        //     },
+        //     error:function(e){
+        //     }
+        // });
+        $('#table').bootstrapTable('destroy');
+        $('#table').bootstrapTable({
+            ajax : function (request) {
+                $.ajax({
+                    url: "/aqi/compareCitys/2",
+                    type: "POST",
+                    dataType: "json",
+                    data : {names: JSON.stringify(arr_data)},
+                    success : function (msg) {
+                        compare(msg['aqiVos']);
+                        request.success({
+                            row : msg['computers']
+                        });
+                        $('#table').bootstrapTable('load', msg['computers']);
+                    },
+                    error:function(){
+                        alert("错误");
+                    }
+                });
             },
-            error:function(e){
-            }
+            toolbar:'#toolbar',
+            singleSelect:true,
+            clickToSelect:true,
+            sortName: "create_time",
+            sortOrder: "desc",
+            pageSize: 15,
+            pageNumber: 1,
+            pageList: "[10, 25, 50, 100, All]",
+            showToggle: true,
+            showRefresh: true,
+            showColumns: true,
+            search: true,
+            pagination: true,
+            class:'table table-hover',
+            columns: [{
+                field: 'name',
+                title: '城市',
+                switchable: true
+            }, {
+                field: 'goodcount',
+                title: '优',
+                switchable: true
+            }, {
+                field: 'justsosocount',
+                title: '良',
+                switchable: true
+            }, {
+                field: 'lightcount',
+                title: '轻度污染',
+                switchable: true,
+                sortable: true
+            }, {
+                field: 'zcount',
+                title: '中度污染',
+                switchable: true
+            }, {
+                field: 'badcount',
+                title: '重度污染',
+                switchable: true
+            },{
+                field: 'badestcount',
+                title: '爆表',
+                switchable: true
+            },{
+                field: 'totalhours',
+                title: '总共收录的小时总数',
+                switchable: true
+            }],
+
         });
     }
     
@@ -103,7 +182,7 @@
                 text: 'AQI城市对比图'
             },
             subtitle: {
-                text: ''
+                text: '只显示近三十天的数据 <a href="#">查看历史数据</a>'
             },
             xAxis: {
                 type: 'datetime',
