--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,10 +31,8 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/js/bootstrap-select.min.js"></script>
 <!--    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/highcharts.js"></script>-->
 <!--    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/modules/exporting.js"></script>-->
-    <script src="https://code.highcharts.com.cn/highcharts/highcharts.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/highcharts/9.0.1/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/variwide.js"></script>
-    <script src="https://code.highcharts.com.cn/highcharts/highcharts-more.js"></script>
-    <script src="https://code.highcharts.com.cn/highcharts/modules/solid-gauge.js"></script>
     <script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>
 
 </head>
@@ -48,7 +46,7 @@
         <div class='row'>
             <div class="col-md-5"></div>
             <div class="col-md-2">
-                <div class="form-group">
+                <div id="dayTime" class="form-group">
                     <div class='input-group date' id='datetimepicker1'>
                         <input type='text' class="form-control" />
                         <span class="input-group-addon">
@@ -101,7 +99,7 @@
             e.preventDefault()
             $(this).siblings('a').removeClass('active');  // 删除其兄弟元素的样式
             $(this).addClass('active');
-            $(".form-control").val(now);
+            $("#dayTime .form-control").val(now);
             if($(this).attr("id") != '0'){
                 showByCity($(this).attr("id"), $('.selectpicker option:selected').val());
             }else{
@@ -197,13 +195,6 @@
             return fmt;
         }
         let now = new Date().format("yyyy-MM-dd");
-
-        $('#datetimepicker1').val('');
-        $('#datetimepicker1').datetimepicker({
-            format: 'YYYY-MM-DD',
-            locale: moment.locale('zh-cn'),
-            defaultDate: now,
-        });
 
         $.ajax({
             url:'/aqi/getPidData/'+id+'/'+type+'?tmp='+now,//请求数据的地址
@@ -386,7 +377,7 @@
                     }
                 }, { // Strong breeze
                     from: 300,
-                    to: 1000,
+                    to: 1200,
                     color: 'rgba(126, 0, 35, 0.1)',
                     label: {
                         text: '污染爆表',
