--- a/src/main/resources/templates/area.html
+++ b/src/main/resources/templates/area.html
@@ -21,12 +21,13 @@
             border-bottom-left-radius:0;
         }
     </style>
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment-with-locales.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.css" rel="stylesheet">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/moment.js/2.29.1/moment-with-locales.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+
     <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/css/bootstrap-select.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/js/bootstrap-select.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/highcharts/9.0.1/highcharts.js"></script>
@@ -153,26 +154,45 @@
             let  time = ev.date.valueOf();
             let datestr = new Date(time).format('yyyy-MM-dd');
             var selected = $('.selectpicker option:selected').val();
-            $('#city').children().map(function (index, e) {
-                if($(this).hasClass('active')){
-                    let id = $(this).attr('id');
-                    console.log(id);
-                    $.ajax({
-                        url:'/getAreaAqiByCity/'+id+'/'+ selected+'?tmp='+datestr,//请求数据的地址
-                        type : "get",
-                        async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
-                        data : {},
-                        dataType : "json",        //返回数据形式为json
-                        success:function(result){
-                            let count = (result['x']).length;
-                            $("#container").css("height", count * 500);
-                            areaReact(result['x'], result['aqis']);
-                        },
-                        error:function(e){
-                        }
-                    });
-                }
-            });
+            let city = $('#keyword').val();
+            console.log(city);
+            if(city == '') {
+                $('#city').children().map(function (index, e) {
+                    if ($(this).hasClass('active')) {
+                        let id = $(this).attr('id');
+                        console.log(id);
+                        $.ajax({
+                            url: '/getAreaAqiByCity/' + id + '/' + selected + '?tmp=' + datestr,//请求数据的地址
+                            type: "get",
+                            async: true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
+                            data: {},
+                            dataType: "json",        //返回数据形式为json
+                            success: function (result) {
+                                let count = (result['x']).length;
+                                $("#container").css("height", count * 500);
+                                areaReact(result['x'], result['aqis']);
+                            },
+                            error: function (e) {
+                            }
+                        });
+                    }
+                });
+            }else{
+                $.ajax({
+                    url: '/getAreaAqiByCityName/'+ selected + '?tmp=' + datestr + '&city=' + city,//请求数据的地址
+                    type: "get",
+                    async: true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
+                    data: {},
+                    dataType: "json",        //返回数据形式为json
+                    success: function (result) {
+                        let count = (result['x']).length;
+                        $("#container").css("height", count * 500);
+                        areaReact(result['x'], result['aqis']);
+                    },
+                    error: function (e) {
+                    }
+                });
+            }
         });
 
         $('#datetimepicker2').datetimepicker({
@@ -184,31 +204,78 @@
             let  time = ev.date.valueOf();
             let datestr = new Date(time).format('yyyy-MM');
             var selected = $('.selectpicker option:selected').val();
-            $('#city').children().map(function (index, e) {
-                if($(this).hasClass('active')){
-                    let id = $(this).attr('id');
-                    console.log(id);
-                    $.ajax({
-                        url:'/getMouthAreaAqiByCity/'+id+'/'+ selected+'?tmp='+datestr,//请求数据的地址
-                        type : "get",
-                        async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
-                        data : {},
-                        dataType : "json",        //返回数据形式为json
-                        success:function(result){
-                            if(result['code'] == 500){
-                                alert(result['msg'])
-                            }{
-                                moutReact(result['x'], result['data']);
+            let city = $('#keyword').val();
+            console.log(city);
+            if(city == '') {
+                $('#city').children().map(function (index, e) {
+                    if ($(this).hasClass('active')) {
+                        let id = $(this).attr('id');
+                        console.log(id);
+                        $.ajax({
+                            url: '/getMouthAreaAqiByCity/' + id + '/' + selected + '?tmp=' + datestr,//请求数据的地址
+                            type: "get",
+                            async: true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
+                            data: {},
+                            dataType: "json",        //返回数据形式为json
+                            success: function (result) {
+                                if (result['code'] == 500) {
+                                    alert(result['msg'])
+                                }
+                                {
+                                    moutReact(result['x'], result['data']);
+                                }
+                            },
+                            error: function (e) {
+                                alert("系统异常")
                             }
-                        },
-                        error:function(e){
-                            alert("系统异常")
+                        });
+                    }
+                });
+            }else{
+                $.ajax({
+                    url: '/getMouthAreaAqiByCityName/' + selected + '?tmp=' + datestr +'&city='+ city,//请求数据的地址
+                    type: "get",
+                    async: true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
+                    data: {},
+                    dataType: "json",        //返回数据形式为json
+                    success: function (result) {
+                        if (result['code'] == 500) {
+                            alert(result['msg'])
                         }
-                    });
-                }
-            });
+                        {
+                            moutReact(result['x'], result['data']);
+                        }
+                    },
+                    error: function (e) {
+                        alert("系统异常")
+                    }
+                });
+            }
         });
     })
+
+    function search() {
+        let selected = $('.selectpicker option:selected').val();
+        let city = $('#keyword').val();
+        $.ajax({
+            url:'/getAqiByCityName/'+city,//请求数据的地址
+            type : "get",
+            async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
+            data : {},
+            dataType : "json",        //返回数据形式为json
+            success:function(result){
+                if(result.code == 200){
+                    show(result.data, selected);
+                    showMouth(result.data, selected);
+                }else{
+                    alert(result.msg);
+                }
+            },
+            error:function(e){
+                console.log(e)
+            }
+        });
+    }
 
     function show(id, type) {
         Date.prototype.format = function(fmt) {
